--- a/index.html
+++ b/index.html
@@ -1,72 +1,57 @@
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
-		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/logo_title.png">
-		<!-- Author Meta -->
+		<link rel="shortcut icon" href="img/logo.png">
 		<meta name="author" content="codepixer">
-		<!-- Meta Description -->
 		<meta name="description" content="">
-		<!-- Meta Keyword -->
 		<meta name="keywords" content="">
-		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>Nawa Jelly</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,800&display=swap" rel="stylesheet"> 
-			<!--
-			CSS
-			============================================= -->
-			<link rel="stylesheet" href="css/linearicons.css">
-			<link rel="stylesheet" href="css/font-awesome.min.css">
-			<link rel="stylesheet" href="css/bootstrap.css">
-			<link rel="stylesheet" href="css/magnific-popup.css">
-			<link rel="stylesheet" href="css/nice-select.css">					
-			<link rel="stylesheet" href="css/animate.min.css">
-			<link rel="stylesheet" href="css/owl.carousel.css">
-			<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/linearicons.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href="css/nice-select.css">					
+		<link rel="stylesheet" href="css/animate.min.css">
+		<link rel="stylesheet" href="css/owl.carousel.css">
+		<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>
-
-			  <header id="header" id="home">
-			    <div class="container">
-			    	<div class="row align-items-center justify-content-between d-flex">
-				      <div id="logo">
-				        <a href="index.html" class="d-flex">
-				        	<img src="img/logo.png" alt="" title="" />
-									<h3>Nawa Jelly</h3>
-				        </a>
-				      </div>
-				      <nav id="nav-menu-container">
-				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="#home">Home</a></li>
-				          <li><a href="#about">About</a></li>
-				          <li><a href="#varian">Varian</a></li>
-				          <li><a href="#how">Info</a></li>
-				          <li><a href="#infoagen">Agen</a></li>
-				          <li><a href="#gabung">Gabung</a></li>
-				        </ul>
-				      </nav><!-- #nav-menu-container -->		    		
-			    	</div>
-			    </div>
-			  </header><!-- #header -->
-
-
+		  <header id="header" id="home">
+		    <div class="container">
+		    	<div class="row align-items-center justify-content-between d-flex">
+			      <div id="logo">
+			        <a href="index.html" class="d-flex">
+			        	<img src="img/logo.png" alt="" title="" />
+								<h3>Nawa Jelly</h3>
+			        </a>
+			      </div>
+			      <nav id="nav-menu-container">
+			        <ul class="nav-menu">
+			          <li class="menu-active"><a href="#home">Home</a></li>
+			          <li><a href="#about">Tentang</a></li>
+			          <li><a href="#varian">Varian</a></li>
+			          <li><a href="#how">Info</a></li>
+			          <li><a href="#infoagen">Agen</a></li>
+			          <li><a href="#gabung">Gabung</a></li>
+			        </ul>
+			      </nav>		    		
+		    	</div>
+		    </div>
+		  </header>
 			<!-- start banner Area -->
 			<section class="banner-area" id="home">	
 				<div class="container">
 					<div class="row fullscreen d-flex align-items-center justify-content-start">
 						<div class="banner-content col-lg-7">
-							<h6 class="text-white text-uppercase">Now you can feel the Energy</h6>
-							<h1>
-								Start your day <br>
-								with Nawa Jelly				
-							</h1>
-							<!-- <a href="#" class="primary-btn text-uppercase">Buy Now</a> -->
+							<h6 class="text-white text-uppercase">Minuman Jelly Dengan Susu Krimer</h6>
+							<h1>Mulai Harimu <br>Dengan <br class="show">Nawa Jelly</h1>
+							<a href="#infoagen" class="btn btn-primary btn-buy">Beli Sekarang</a>
 						</div>
 						<div class="banner-image col-lg-5 text-center">
 							<img src="./img/nawajelly.png" alt="nawajelly">
@@ -77,7 +62,7 @@
 			<div class="shape-divider"></div>
 			<!-- End banner Area -->	
 
-			<!-- Start video-sec Area -->
+			<!-- Start video Area -->
 			<section class="video-sec-area pb-40 pt-40" id="about">
 				<div class="container">
 					<div class="row justify-content-start align-items-center">
@@ -92,10 +77,10 @@
 					</div>
 				</div>	
 			</section>
-			<!-- End video-sec Area -->
+			<!-- End video Area -->
 			
 			<!-- Start varian Area -->
-			<div class="shape-divider-top"></div>
+			<div class="shape-divider-top sebelum-menu"></div>
 			<section class="menu-area section-gap1" id="varian">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
@@ -115,7 +100,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Alpukat</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -128,7 +113,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Cokelat</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -141,7 +126,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Green Tea</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -154,7 +139,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Leci</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -167,7 +152,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Mangga</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -180,7 +165,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Pisang</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -193,7 +178,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Stroberi</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -206,7 +191,7 @@
 								<div class="title-div justify-content-between d-flex">
 									<h4>Taro</h4>
 									<p class="price float-right">
-										Rp 10.000
+										Rp 12.000
 									</p>
 								</div>
 							</div>
@@ -229,43 +214,47 @@
 						</div>
 					</div>						
 					<div class="row">
-						<div class="col-lg-3 text-center">
-							<div class="content">	
+						<div class="col-lg-3 justify-content-center">
+							<div class="content" text-center>	
 								<div class="icon mb-3">
-									<img src="./img/how/icon-hp.png" alt="">
+									<img src="./img/how/icon-1.png" alt="">
 								</div>
 								<div class="text text-center">
-									<p>Kunjungi Instagram Official @nawa.jelly</p>
+									<h5>Buka Instagram</h5>
+									<p>Kunjungi Instagram official @nawa.jelly</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-3 text-center">
-							<div class="content">
+						<div class="col-lg-3 justify-content-center">
+							<div class="content text-center">
 								<div class="icon mb-3">
-									<img src="./img/how/icon-list.png" alt="">
+									<img src="./img/how/icon-2.png" alt="">
 								</div>
 								<div class="text text-center">
-									<p>Isi Form Data Diri Yang dikirim Oleh Admin, Lalu Admin Akan Infokan Agent Terdekat Dari Lokasi Anda</p>
+									<h5>Isi Formulir</h5>
+									<p>Isi form data diri yang dikirim oleh admin, lalu admin akan infokan agen terdekat dari lokasi anda</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-3 text-center">
-							<div class="content">
+						<div class="col-lg-3 justify-content-center">
+							<div class="content text-center">
 								<div class="icon mb-3">
-									<img src="./img/how/icon-send.png" alt="">
+									<img src="./img/how/icon-3.png" alt="">
 								</div>
 								<div class="text text-center">
-									<p>Kontak Admin Melalui DM Instagram atau Whatsapp</p>
+									<h5>Kontak Admin</h5>
+									<p>Kontak admin melalui direct message Instagram atau Whatsapp</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-3 text-center">
-							<div class="content">
+						<div class="col-lg-3 justify-content-center">
+							<div class="content text-center">
 								<div class="icon mb-3">
-									<img src="./img/how/icon-store.png" alt="">
+									<img src="./img/how/icon-4.png" alt="">
 								</div>
 								<div class="text text-center">
-									<p>Order Via Agen Resmi Atau Kunjungi Langsung Agent Terdekat</p>
+									<h5>Order via Agen</h5>
+									<p>Order via agen resmi atau kunjungi langsung agen terdekat</p>
 								</div>
 							</div>
 						</div>
@@ -376,24 +365,23 @@
 						<div class="menu-content col-lg-10">
 							<div class="title text-center">
 								<h1 class="mb-10">Yuk Gabung</h1>
-								<p>Yuk gabung dengan NawaJelly, banyak untung nya lho</p>
+								<p>Yuk gabung dengan Nawa Jelly, banyak untung nya lho</p>
 							</div>
 						</div>
 					</div>
 					<div class="row gabung-content align-items-center">
-						<div class="col-lg-6 text-center order-2">
-							<img src="./img/logo_title.png" alt="">
+						<div class="col-lg-6 gabung-text text-center">
+							<img src="./img/logo tanpa stroke blue.png" alt="">
 							<h3>"Yuk, gabung dan cari untung bareng <strong>Nawa Jelly</strong> dijamin banyak untungnya"</h3>
 							<a href="#" class="btn btn-primary btn-wa mt-3"><i class="fa fa-whatsapp"></i> Whatsapp</a>
 						</div>
-						<div class="col-lg-6 gabung-image order-1">
+						<div class="col-lg-6 gabung-image">
 						</div>
 					</div>
 				</div>	
 			</section>
 			<!-- End gabung Area -->
 			
-
 			<!-- start footer Area -->		
 			<footer class="footer-area section-gap1 pb-0">
 				<div class="container">
@@ -407,13 +395,14 @@
 					<div class="row">
 						<div class="col-md text-center">
 							<div class="single-footer-widget">
+								<img src="./img/logo.png" alt="">
 								<h6>Nawa Jelly</h6>
-								<p>NawaJelly Minuman Jelly dengan Susu Krimer dan Perisa Buah Tanpa Pemanis Tambahan</p>
+								<p>Nawa Jelly Minuman Jelly dengan Susu Krimer dan Perisa Buah Tanpa Pemanis Tambahan</p>
 							</div>
 						</div>
 						<div class="col-md social-widget">
 							<div class="single-footer-widget text-center">
-								<i class="fa fa-phone"></i>
+								<i class="fa fa-phone sign-icon"></i>
 								<h6>Kontak Kami</h6>
 								<p>untuk info lebih lanjut</p>
 								<div class="footer-social text-center">
@@ -426,13 +415,13 @@
 						</div>
 						<div class="col-md social-widget">
 							<div class="single-footer-widget text-center">
-								<i class="fa fa-map-marker"></i>
+								<i class="fa fa-map-marker sign-icon"></i>
 								<h6>Lokasi</h6>
 								<p>Jl. Otista Raya. Komplek Ruko Prima Blok A16, Ciputat, Tanggerang</p>
 							</div>
 						</div>							
 					</div>
-					<div class="row mt-30 mb-0">
+					<div class="row mt-40 mb-0">
 						<div class="col text-center">
 							<p>&copy; 2019 <strong>NawaJelly</strong> | by <span style="color: salmon">Natta Reza & Wardah</span></p>
 						</div>
@@ -461,6 +450,3 @@
 			<script src="js/script.js"></script>	
 		</body>
 	</html>
-
-
-
